<resources>
    <string name="google_geo_api_key">AIzaSyAEK_qwu1Ph_2Le_jYahcqjbRwfP3wjaGg</string>
    <string name="app_name">School Management</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_profile">Profile</string>
    <string name="text_bio_data">Bio Data</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_b_date">Birth Date</string>
    <string name="text_rollno">Roll Number</string>
    <string name="text_standard">Standard</string>
    <string name="text_branch">Branch</string>
    <string name="text_semester">Semester</string>
    <string name="text_division">Division</string>
    <string name="text_contact_details">Contact Details</string>
    <string name="text_address">Address</string>
    <string name="text_parent_contact">Parent Contact</string>
    <string name="text_city">City</string>
    <string name="text_batch">Batch</string>
    <!-- Strings related to Menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_attendence">Attendence</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_result">Result</string>
    <string name="menu_teacher">Teacher</string>
    <string name="menu_growth">Growth</string>
    <string name="menu_holiday">Holiday</string>
    <string name="menu_news">News &amp; Event</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_school">School Profile</string>
    <string name="menu_time_table">Time Table</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_fees">Fees</string>
    <string name="menu_book">Book</string>
    <string name="menu_notification">Notifications</string>
    <string name="title_activity_attendence">Attendence</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_message">Message</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_note"><b>Note</b> </string>
    <string name="action_sign_in_note_text">student login provided by school to authanticated student.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_exam">Exams</string>
    <string name="title_activity_teacher">Teachers</string>
    <string name="title_activity_growth">Growth</string>
    <string name="title_activity_holidays">Holidays</string>
    <string name="title_activity_news">News And Events</string>
    <string name="title_activity_notice">Notice</string>
    <string name="title_activity_enquiry">Enquiry</string>
    <string name="title_activity_school">School Profile</string>
    <string name="title_activity_time_table">Time Table</string>

    <string name="prompt_subject">Subject</string>
    <string name="title_activity_result_list">Result Details</string>
    <string name="title_activity_top_student">Top Student</string>
    <string name="main_activity_logout">Logout Sucessfull</string>
    <string name="permission_required">App required some permission please enable it</string>
    <string name="fire">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="attendence_show">SHOW</string>
    <string name="enquiry_add_message"> + New message</string>
    <string name="content_result_list_student_name">Student Name : </string>
    <string name="content_result_list_exam_title">Exam Title</string>
    <string name="content_result_list_date">01/12/2016</string>
    <string name="content_result_list_subject">Subject</string>
    <string name="content_result_list_total_marks">Total Marks</string>
    <string name="content_result_list_marks">Marks</string>
    <string name="content_result_list_obtain">Obtain</string>
    <string name="content_result_list_perstage">50%</string>
    <string name="dialog_attend_note_attendance_note">Attendance Note</string>
    <string name="dialog_enquiry_message">Enquiry Message</string>
    <string name="row_for_event_title">Title</string>
    <string name="row_for_event_start_date">Start Date</string>
    <string name="row_for_event_end_date">End Date</string>
    <string name="row_for_event_new_text">New Text</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="quiestions">Quiestions:\u0020</string>
    <string name="dace">\u0020/\u0020</string>
    <string name="select_answer">Please select answer</string>
    <string name="exam_finish">\u0020Exam Finished.\u0020</string>
    <string name="total_questions">Total questions:\u0020</string>
    <string name="total_right_answer">Total right answer:\u0020</string>
    <string name="total_false_answer">Total false answer:\u0020</string>
    <string name="exam_time">Exam time:\u0020</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancle">@android:string/cancel</string>
    <string name="oops_time_up">Oops! Time up.\n</string>
    <string name="quiz_result">\u0020Quiz Result</string>
    <string name="your_answer">Your Answer:\u0020</string>
    <string name="right_answer">Right Answer:\u0020</string>
    <string name="not_answer">Not Answer</string>
    <string name="are_you_sure">Are you sure! you want start exam.</string>
    <string name="year">Year:\u0020</string>
    <string name="fees_pay_date">Fees pay date:\u0020</string>
    <string name="fees_amount">Fees amount:\u0020</string>
    <string name="fees_pay_amount">Fees pay amount:\u0020</string>
    <string name="left_paid_amount">Left paid amount:\u0020</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="note_call">Would you like to do call?</string>
    <string name="owner_phone">School Phone No.:\u0020</string>

</resources>
