<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.e_school.ResultListActivity"
    tools:showIn="@layout/activity_result_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_result_list_student_name"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/stud_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xyz Student"
                android:textColor="#e5e5e5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/exam_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_result_list_exam_title"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/exam_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_result_list_date"
                    android:textColor="#e5e5e5" />


            </LinearLayout>

            <TextView
                android:id="@+id/percentage"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/content_result_list_perstage"
                android:textColor="#e5e5e5"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e5e5e5"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/content_result_list_subject" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_marks" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_obtain" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>
